samples/_failures_safe/1761044815_341687_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93f94f28.c: In function ‘main’:
./samples/SAFE/__tmp_93f94f28.c:146:9: error: expected expression at end of input
  146 |         strncpy(logs[log_count].message, message, sizeof(logs[log_count].message) -
      |         ^~~~~~~
./samples/SAFE/__tmp_93f94f28.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93f94f28.c:146:9: error: expected declaration or statement at end of input
